[FIX] Search submit button was out of place.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/users/chibaguy@21600 b456876b-0849-0410-b77d-98878d47e9d5

--- a/trunk_themes/themes/abse_tiki_4/styles/abse.css
+++ b/trunk_themes/themes/abse_tiki_4/styles/abse.css
@@ -303,9 +303,13 @@ div#sioptions {
 	padding-left: 3em}
 
 #sitesearchbar {
-	max-width: 300px;
+/*	max-width: 300px;*/
 	margin-right: 10px;
 	font-size: 90%}
+	
+#tiki-top form.findtable {
+	vertical-align: bottom;
+}
 
 /****** Menus, Links ******/
 /** CSS (suckerfish) menus **/
